<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white"
    android:id="@+id/layout">

    <LinearLayout
        android:layout_margin="30sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_above="@+id/login">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:fontFamily="sans-serif-medium"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:id="@+id/email"
                android:textColor="@color/black"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:id="@+id/password"
                android:textColor="@color/black"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="16dp"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:id="@+id/forgotButton"/>


    </LinearLayout>
    <Button
        android:layout_marginRight="50sp"
        android:layout_marginLeft="50sp"
        android:layout_marginBottom="20sp"
        android:layout_alignParentBottom="true"
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:background="@drawable/button_round"/>
</RelativeLayout>
