<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/tools"
    android:background="@color/blackTransparent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10sp">

            <TextView
                android:layout_marginTop="10sp"
                android:layout_marginLeft="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stories"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginStart="10sp" />
            <TextView
                android:layout_marginLeft="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_a_snap_to_my_story_friends_can_see_it_for_24_hours"
                android:textColor="@color/white"
                android:layout_marginStart="10sp" />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:clipToPadding="false"
                android:clipChildren="false"
                app:cardUseCompatPadding="true"
                card_view:cardPreventCornerOverlap="false">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:padding="10sp">
                    <TextView
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_story"
                        android:textSize="14sp"
                        />
                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/story"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <TextView
                android:layout_marginTop="5sp"
                android:layout_marginLeft="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friends"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginStart="10sp" />
            <TextView
                android:layout_marginLeft="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_your_snap_directly_to_a_friend"
                android:textColor="@color/white"
                android:layout_marginStart="10sp" />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:clipToPadding="false"
                android:clipChildren="false"
                app:cardUseCompatPadding="true"
                card_view:cardPreventCornerOverlap="false">
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/recyclerView"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:id="@+id/send"
        android:layout_gravity="bottom|end"
        android:src="@android:drawable/ic_media_play"/>
</FrameLayout>
