<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:card_view="http://schemas.android.com/tools"
    android:background="@color/white">
    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/actionBarSize"
                    android:background="@color/white">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <ImageView
                            android:tint="@color/black"
                            android:layout_gravity="center_vertical"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:background="@drawable/ic_navigate_before_black_24dp"
                            android:id="@+id/back"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/edit_profile"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:layout_marginLeft="15sp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="15sp" />
                        <View
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1"/>
                        <ImageView
                            android:tint="@color/colorAccent"
                            android:layout_gravity="center_vertical"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginRight="24dp"
                            android:src="@drawable/ic_check_black_24dp"
                            android:id="@+id/confirm"
                            android:layout_marginEnd="24dp" />
                    </LinearLayout>
                </androidx.appcompat.widget.Toolbar>
            </com.google.android.material.appbar.AppBarLayout>


            <LinearLayout
                android:layout_margin="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white">
                <TextView
                    android:layout_marginLeft="10sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_account"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_marginStart="10sp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="5sp"
                    android:background="@color/colorPrimary"
                    tools:ignore="SmallSp" />
                <ImageView
                    android:layout_marginTop="20sp"
                    android:layout_width="135sp"
                    android:layout_height="135sp"
                    android:id="@+id/profileImage"
                    android:src="@mipmap/ic_launcher"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:gravity="center"
                    android:paddingTop="5sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:text="@string/change_photo"/>

                <TextView
                    android:paddingTop="20sp"
                    android:paddingLeft="10sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:paddingStart="10sp"
                    tools:ignore="RtlSymmetry" />
                <EditText
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/name"
                    android:hint="@string/name"/>



                <TextView
                    android:layout_marginTop="30sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_actions"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="10sp"
                    android:layout_marginStart="10sp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/colorPrimary"/>

                <Button
                    android:id="@+id/logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20sp"
                    android:textSize="16sp"
                    android:text="@string/log_out"
                    android:layout_gravity="start"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:focusable="true"
                    android:clickable="true"
                    tools:ignore="UnusedAttribute" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>


